Version 2024080901
+ Significant rewrite.
    o The "keep_pattern" option has been dropped. This should not have been
      used outside of testing Regexp::Common anyway, and it's more
      annoying than useful.

Version 2017040101 Sat Apr  1 14:05:59 CEST 2017
+ Prepare for 5.26

Version 2016060501 Sun Jun  5 00:40:52 CEST 2016
+ Fix POD spelling errors (Salvatore Bonaccorso <carnil@debian.org>)

Version 2016052701 Fri May 27 19:46:42 CEST 2016
+ Allow specifying how you want display characters which aren't printable
  ASCII characters. It used to be displayed as hex escapes. We know also
  allow named escapes, "as is", \n/\r/\t only or "only escape non-printable
  ASCII", which is the new default.

Version 2015110201 Mon Nov  2 21:34:52 CET 2015
+ Removed a my() inside a my(). This is a new failure in 5.23.*
+ Eliminate the use of given

Version 2014052301 Fri May 23 20:49:03 CEST 2014
+ Allow surprising the "(with -Keep)" using the "no_keep_message" option.

Version 2013042301 Tue Apr 23 16:07:05 CEST 2013
+ Fall back to using the pattern if neither name or comment are given.

Version 2013042101 Sun Apr 21 23:34:57 CEST 2013
+ Made a 'name' accessor for Test::Regexp::Object
+ Allow objects to store "tags".
+ Remove ghost_num_captures and ghost_name_captures.

Version 2013041501 Mon Apr 15 23:45:33 CEST 2013
+ Add Test::Tester to test_requires
+ Added a "todo" parameter to match()

Version 2013041201 Fri Apr 12 23:05:10 CEST 2013
+ Made the 'full_text' option to work.

Version 2013040301 Wed Apr  3 14:19:40 CEST 2013
+ Sync version numbers between files.

Version 2013040201 Tue Apr  2 19:33:03 CEST 2013
+ Used Test::Tester to check tests.

Version 2009121701
+ Removed t/990_kwalitee.t

Version 2009121403
+ Sync VERSION numbers

Version 2009121402
+ Require Test::More 0.88.

Version 2009121401
+ Tweaks in displaying messages.

Version 2009121001
+ Better skipping of tests.

Version 2009120903
+ Use @+ instead of @- to find the number of captures.
